# haskell-for-reddit-bot

./: .gitignore  README.md  appunti.txt  haskell-for-reddit-bot.cabal  propertiesCHANGEME.txt  reddit-bot.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Persistence.hs  Properties.hs  RedditClient.hs
