name:                reddit-bot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/reddit-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Vitalij Zadneprovskij
maintainer:          example@example.com
copyright:           2016 Vitalij Zadneprovskij
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Persistence, RedditClient, Properties
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mysql-simple
                     , bytestring
                     , reddit
                     , ini
  default-language:    Haskell2010

executable reddit-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reddit-bot
                     , text
                     , mysql-simple
                     , bytestring
                     , reddit
                     , ini
  default-language:    Haskell2010

test-suite reddit-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , reddit-bot
                     , mysql-simple
                     , bytestring
                     , ini
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/reddit-bot
